--- a/requirements.txt
+++ b/requirements.txt
@@ -5,3 +5,5 @@ pytz==2019.3
 sqlparse==0.3.0
 django-colorfield==0.4.1
 django-crispy-forms==1.11.2
+django-phonenumber-field==5.1.0
+phonenumbers==8.12.23
